# excel-toolset

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  excel-toolset-vs-officecli-analysis.md
crates/excel-cli/: Cargo.toml
crates/excel-cli/src/: main.rs
crates/excel-cli/src/cli/: args.rs  commands.rs  mod.rs  runners.rs
crates/excel-cli/tests/: integration_tests.rs
crates/excel-core/: Cargo.toml
crates/excel-core/examples/: debug_append.rs  debug_clear.rs  debug_delete.rs  debug_formula.rs  debug_parse_range.rs  debug_sort.rs  debug_sort_direct.rs  debug_write.rs
crates/excel-core/src/: comments.rs  conditional_format.rs  dispatch.rs  excel_data.rs  excel_read.rs  excel_write.rs  file_util.rs  formula_analysis.rs  helpers.rs  lib.rs  search.rs  security.rs  types.rs  vba_util.rs
crates/excel-core/src/api/: diff.rs  mod.rs  routing.rs
crates/excel-core/src/data_ops/: mod.rs  modify.rs  query.rs  rows.rs
crates/excel-core/src/excel_write/: batch.rs  cell.rs  chart.rs  core.rs  csv.rs  data.rs  data_mut.rs  format.rs  mod.rs  operations.rs  ops.rs  sheet.rs  style.rs  util.rs  write.rs
crates/excel-core/src/features/: auto_filter.rs  comments.rs  conditional_format.rs  data_validation.rs  formula_analysis.rs  formula_eval.rs  formula_ops.rs  freeze_panes.rs  image.rs  mod.rs  named_ranges.rs  page_setup.rs  pivot_table.rs  search.rs  sheet_protection.rs  sheet_visibility.rs  slicer.rs  sparkline.rs  table.rs  vba_util.rs  workbook_overview.rs
crates/excel-core/src/operations/: core.rs  mod.rs  query.rs
crates/excel-core/src/types/: cell.rs  diff.rs  error.rs  mod.rs  response.rs  write.rs
crates/excel-core/src/utils/: cell_ref.rs  file_util.rs  helpers.rs  mod.rs
crates/excel-core/tests/: integration_tests.rs
crates/excel-diff/: .gitattributes  Cargo.toml
crates/excel-diff/docs/: design.md
crates/excel-diff/docs/research/: README.md  llm操作excel的方式.md  开发顺序.md  技术选型.md
crates/excel-diff/src/: api_response.rs  diff_core.rs  engine.rs  file_diff.rs  formula_tracker.rs  git_driver.rs  helpers.rs  lib.rs  main.rs  range_diff.rs  sheet_diff.rs  summarize.rs
crates/excel-diff/src/semantic/: context.rs  grouper.rs  mod.rs  natural.rs
crates/excel-diff/tests/: e2e_workflows.rs  git_e2e.rs  semantic_e2e.rs
crates/excel-diff/tests/git_e2e/: fixtures.rs  gen_fixtures.rs  generate_fixtures.rs  generate_prebuilt_fixtures.rs  helpers.rs  tests.rs
crates/excel-diff/tests/git_e2e/fixtures/: empty.xlsx  formulas.xlsx  modified.xlsx  multi_sheet.xlsx  sheet_del.xlsx  simple.xlsx
crates/excel-diff/tests/git_e2e/outputs/: driver_env_vars_output.txt  empty_vs_empty.json  empty_vs_simple.json  fixture_simple_vs_modified.json  formulas_passive_value_change.json  formulas_text_changed.json  large_changeset.json  multi_sheet_addition.json  multi_sheet_driver_output.txt  sheet_deletion.json  unicode_changes.json
crates/excel-diff/tests/semantic_e2e/: tests.rs
crates/excel-diff/tests/semantic_e2e/outputs/: cell_added_deleted.json  cell_added_deleted.txt  empty_diff.json  formula_changed.json  formula_changed.txt  identical_files.json  mixed_operations.json  mixed_operations.txt  multiple_cells_multi_sheet.json  multiple_cells_multi_sheet.txt  passive_value_change.json  passive_value_change.txt  row_added.json  row_added.txt  row_deleted.json  row_deleted.txt  semantic_report.json  sheet_added.json  sheet_added.txt  sheet_deleted.json  sheet_deleted.txt  sheet_resized.json  sheet_resized.txt  single_cell_modified.json  single_cell_modified.txt  summary_vs_detail.json  summary_vs_detail.txt  summary_vs_detail_detail.txt
crates/excel-http/: Cargo.toml  README.md  REFACTORING_CHECKLIST.md  REFACTORING_COMPLETION_REPORT.md
crates/excel-http/src/: main.rs
crates/excel-http/src/http/: batch.rs  cell.rs  chart.rs  comments.rs  conditional_format.rs  data.rs  diff.rs  file.rs  format.rs  formula.rs  formula_analysis.rs  handlers.rs  health.rs  mod.rs  named_ranges.rs  range.rs  router.rs  search.rs  sheet.rs  vba.rs
crates/excel-http/src/http/advanced/: mod.rs
crates/excel-http/src/http/data_operations/: filter.rs  mod.rs  rows.rs  sql.rs
crates/excel-http/src/http/formatting/: cell_format.rs  conditional.rs  merge.rs  mod.rs
crates/excel-http/src/http/formula/: analysis.rs  basic.rs  mod.rs
crates/excel-http/src/http/handlers/: auto_filter.rs  batch.rs  cell.rs  chart.rs  comments.rs  data_validation.rs  diff.rs  file.rs  formula_ops.rs  freeze_panes.rs  health.rs  image.rs  mod.rs  named_ranges.rs  page_setup.rs  pivot_table.rs  range.rs  search.rs  sheet.rs  sheet_protection.rs  slicer.rs  sparkline.rs  table.rs  vba.rs  workbook_overview.rs
crates/excel-http/src/http/middleware/: mod.rs  validation.rs
crates/excel-http/tests/: e2e_workflows.rs
crates/excel-mcp/: Cargo.toml
crates/excel-mcp/src/: main.rs  protocol.rs  server.rs  tools.rs
crates/excel-mcp/src/tools/: auto_filter.rs  batch.rs  cell.rs  chart.rs  comments.rs  conditional_format.rs  data.rs  data_validation.rs  diff.rs  file.rs  format.rs  formula.rs  freeze_panes.rs  helpers.rs  history.rs  image.rs  named_range.rs  overview.rs  page_setup.rs  pivot_table.rs  range.rs  rollback.rs  search.rs  sheet.rs  sheet_protection.rs  slicer.rs  sparkline.rs  table.rs  vba.rs
crates/excel-sql/: Cargo.toml  ISSUES_AND_FIXES.md  TESTING_REPORT.md  build.rs
crates/excel-sql/docs/: memory-persistence.md  plan.md  storage-analysis.md
crates/excel-sql/src/: cache.rs  config.rs  error.rs  lib.rs  utils.rs
crates/excel-sql/src/converter/: cell_convert.rs  mod.rs  type_mapping.rs
crates/excel-sql/src/db/: conn.rs  engine.rs  loader.rs  mod.rs  query.rs  tables.rs
crates/excel-sql/src/ops/: mod.rs  query.rs  session.rs  write.rs
crates/excel-sql/tests/: integration_test.rs
docs/: excel操作库.md  (+11 more)
excel-tool-gateway/: Cargo.toml
excel-tool-gateway/src/: cell_ref.rs  excel_data.rs  excel_diff.rs  excel_read.rs  excel_write.rs  file_util.rs  main.rs  security.rs  types.rs  vba_util.rs
excel-tool-gateway/src/cli/: commands.rs  mod.rs
excel-tool-gateway/src/http/: handlers.rs  router.rs
(+123 files in other folders)
