[workspace]
resolver = "2"
members = [
    "crates/excel-core",
    "crates/excel-sql",
    "crates/excel-diff",
    "crates/excel-cli",
    "crates/excel-http",
    "crates/excel-dispatch",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
thiserror = "2.0"
