[workspace]
resolver = "2"
members = [
    "crates/excel-types",
    "crates/excel-core",
    "crates/excel-sql",
    "crates/excel-diff",
    "crates/excel-cli",
    "crates/excel-http",
    "crates/excel-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
calamine = "0.35"
rust_xlsxwriter = "0.95"
