[package]
name = "excel-tool-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.31"
rust_xlsxwriter = "0.50"
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["cli"]
cli = ["clap"]
http = ["axum", "tokio"]
