[package]
name = "excel-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "excel-cli"
path = "src/main.rs"

[dependencies]
excel-core = { path = "../excel-core" }
excel-diff = { path = "../excel-diff" }
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
chrono.workspace = true

[features]
sql = ["excel-core/sql"]