[package]
name = "excel-core"
version.workspace = true
edition.workspace = true

[dependencies]
excel-types = { path = "../excel-types" }
excel-sql = { path = "../excel-sql", optional = true }
calamine.workspace = true
rust_xlsxwriter.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11"
chrono.workspace = true
csv = "1.4"
regex = "1.12"
zip = "8.6"
thiserror.workspace = true

[features]
sql = ["excel-sql"]
