[package]
name = "excel-diff"
version.workspace = true
edition.workspace = true

[dependencies]
excel-types = { path = "../excel-types" }
excel-core = { path = "../excel-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
excel-types = { path = "../excel-types" }
tempfile = "3"
rust_xlsxwriter = "0.95"

[[example]]
name = "gen_fixtures"
path = "tests/git_e2e/gen_fixtures.rs"