[package]
name = "excel-diff"
version.workspace = true
edition.workspace = true

[dependencies]
excel-types = { path = "../excel-types" }
excel-core = { path = "../excel-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
excel-types = { path = "../excel-types" }
tempfile = "3"
rust_xlsxwriter.workspace = true

[[example]]
name = "gen_fixtures"
path = "tests/git_e2e/gen_fixtures.rs"