[package]
name = "excel-http"
version.workspace = true
edition.workspace = true

[dependencies]
excel-core = { path = "../excel-core" }
excel-dispatch = { path = "../excel-dispatch" }
excel-diff = { path = "../excel-diff" }
axum = "0.8"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
sql = ["excel-dispatch/sql"]
