[package]
name = "excel-sql"
version.workspace = true
edition.workspace = true

[dependencies]
excel-types = { path = "../excel-types" }
duckdb = { version = "~1.10504.0", features = ["bundled"] }
calamine.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
